--- a/Sms_step4_messageflow_complete_pendingreview.html
+++ b/Sms_step4_messageflow_complete_pendingreview.html
@@ -837,13 +837,13 @@ Privacy Policy Link: ${privacyPolicyLink}
 Terms of Service Link: ${termsLink}`;
         output.classList.remove('hidden');
       } else if (method === "keyword") {
-        output.innerHTML = `Customer's Are able to opt in to SMS to ${brand} by texting ${optIn} at our number which can be found here [${contactUsLink}]. On that page The following verbiage is provided: "By starting a texting ${optIn} with ${brand}, you are agreeing to ${msgType} from ${brand}. Msg & data rates may apply. Msg frequency varies. Unsubscribe at any time by replying ${optOut}. Reply ${help} for help. Privacy Policy link & Terms link
+        output.innerHTML = `Customer's Are able to opt in to SMS to ${brand} by texting ${optIn} at our number which can be found here ${contactUsLink}. On that page The following verbiage is provided: "By starting a texting ${optIn} with ${brand}, you are agreeing to ${msgType} from ${brand}. Msg & data rates may apply. Msg frequency varies. Unsubscribe at any time by replying ${optOut}. Reply ${help} for help. Privacy Policy link & Terms link
 
 Privacy Policy Link: ${privacyPolicyLink}
 Terms of Service Link: ${termsLink}`;
         output.classList.remove('hidden');
       } else if (method === "initiated") {
-        output.innerHTML = `Customer's Are able to opt in to SMS to ${brand} by texting us at our number which can be Found here [${contactUsLink}]. On that page The following verbiage is provided: "By starting a text conversation with ${brand}, you are agreeing to ${msgType} from ${brand}. Msg & data rates may apply. Msg frequency varies. Unsubscribe at any time by replying ${optOut} . Reply ${help} for help. Privacy Policy [link] & Terms [link]
+        output.innerHTML = `Customer's Are able to opt in to SMS to ${brand} by texting us at our number which can be Found here ${contactUsLink}. On that page The following verbiage is provided: "By starting a text conversation with ${brand}, you are agreeing to ${msgType} from ${brand}. Msg & data rates may apply. Msg frequency varies. Unsubscribe at any time by replying ${optOut} . Reply ${help} for help. Privacy Policy [link] & Terms [link]
 
 Privacy Policy Link: ${privacyPolicyLink}
 Terms of Service Link: ${termsLink}`;
