--- a/SMS_Campaign.html
+++ b/SMS_Campaign.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="SMS_Campaign.css">
+  <link rel="stylesheet" href="src/SMS_Campaign.css">
   <title>SMS Campaign Assistance Form</title>
 </head>
 <body>
@@ -318,6 +318,6 @@
       <button class="btn-next" id="step4SubmitBtn" onclick="submitCampaign()" disabled>DONE!</button>
     </div>	 
 	
-  <script src="./SMS_Campaign.js"></script>
+  <script src="src/SMS_Campaign.js"></script>
 </body>
 </html>
